Fix delete opinion
